# cool-db

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
data/: reset_data.sh  table_format.txt
data/live/: cell_test.txt  created_table.txt  sample_table_1.txt  test.txt
examples/: sample_table_1.txt  table_format.txt
includes/: models.hpp  table.hpp
src/: cell.cc  column.cc  database.cc  db.cc  main.cc  row.cc  table.cc
tests/: cell_tests.cc  database_tests.cc  table_tests.cc
